--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,69 +1,66 @@
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:background="@android:color/white"
-        android:layout_height="match_parent"
-        tools:context="com.improve.latetrain.fragments.ChatFragment">
+        android:orientation="vertical"
+        android:isScrollContainer="false"
+        android:fillViewport="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-    />
-
-    <LinearLayout
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-        android:orientation="horizontal">
+            android:background="@android:color/white"
+            tools:context="com.improve.latetrain.fragments.ChatFragment">
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@id/send_btn"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
                 android:id="@+id/send_btn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_margin="16dp"
-                android:padding="8dp"
                 android:background="@drawable/send_shape"
+                android:contentDescription="@string/to_info"
+                android:padding="8dp"
                 android:src="@drawable/ic_arrow_back_white_24dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:contentDescription="to info"
                 android:tooltipText="@string/take_out_frustration"
-                />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent" />
 
-
-        <EditText
+        <com.improve.latetrain.EditTextBackEvent
                 android:id="@+id/write_et"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/send_btn"
-                android:background="@drawable/text_sender_bg"
-                android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
+                android:background="@drawable/text_sender_bg"
+                android:fontFamily="@font/comixno2_medium"
+                android:hint="@string/type_here_chat"
+                android:imeOptions="flagNoExtractUi"
+                android:inputType="textMultiLine|textNoSuggestions"
+                android:maxLines="6"
                 android:padding="8dp"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
+                android:singleLine="false"
                 android:textColor="@color/colorPrimary"
-                android:textSize="20sp"
                 android:textColorHint="#7EB2F5"
-                android:hint="@string/type_here_chat"
-                android:fontFamily="@font/comixno2_medium"
-                android:inputType="textMultiLine"/>
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/send_btn"
+                app:layout_constraintRight_toRightOf="parent" />
 
-
-    </LinearLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
