--- a/app/src/main/res/layout/live_bar_layout.xml
+++ b/app/src/main/res/layout/live_bar_layout.xml
@@ -7,13 +7,14 @@
         android:layout_height="wrap_content"
         android:background="@android:color/white"
         android:orientation="horizontal"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
         app:layout_scrollFlags="scroll|enterAlways">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/topLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:background="@drawable/live_container"
