--- a/app/src/main/res/layout/content_drawer.xml
+++ b/app/src/main/res/layout/content_drawer.xml
@@ -6,7 +6,7 @@
         android:layout_height="match_parent"
         android:id="@+id/content_drawer_constraint"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".DrawerActivity"
+        tools:context=".activities.DrawerActivity"
         tools:showIn="@layout/app_bar_drawer">
 
     <include
