--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#FFFFFF"
-        tools:context=".activities.AboutUsActivity">
+        tools:context=".ui.activities.AboutUsActivity">
 
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_aau"
