--- a/app/src/main/res/layout/activity_write_us.xml
+++ b/app/src/main/res/layout/activity_write_us.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="#FFFFFF"
-        tools:context=".activities.WriteUsActivity">
+        tools:context=".ui.activities.WriteUsActivity">
 
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_awu"
