--- a/app/src/main/res/layout/fragment_add_mins.xml
+++ b/app/src/main/res/layout/fragment_add_mins.xml
@@ -5,7 +5,7 @@
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:fillViewport="true"
-        tools:context="com.improve.latetrain.fragments.AddMinsFragment">
+        tools:context=".ui.fragments.AddMinsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint_fdd"
