--- a/app/src/main/res/layout/fragment_pictures_gallery.xml
+++ b/app/src/main/res/layout/fragment_pictures_gallery.xml
@@ -6,7 +6,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:background="@android:color/white"
-        tools:context="com.improve.latetrain.fragments.PicturesGalleryFragment">
+        tools:context=".ui.fragments.PicturesGalleryFragment">
 
     <com.google.android.material.appbar.AppBarLayout
             app:elevation="0dp"
